Added better API Docs
